# ecstatic

./: .gitignore  LICENSE  Main.hs  README.md  ecstatic.cabal  install.sh  language-c-0.4.7.patch  mocks.h  test.c  test2.c
Development/: Ecstatic.hs
Development/Ecstatic/: Annotate.hs  Assumptions.hs  BoundsCheck.hs  CallGraph.hs  ExampleSimplify.hs  Simplify.hs  SimplifyDef.hs  Size.hs  StackUsage.hs  Types.hs  Utils.hs
mocks/: float.h  inttypes.h  lapacke.h  limits.h  math.h  stddef.h  stdint.h  stdio.h  stdlib.h  time.h
