name:                ecstatic
version:             0.1.0.0
synopsis:            Static C Examiner
description:         Static C Examiner
homepage:            http://www.swift-nav.com
license:             BSD2
license-file:        LICENSE
author:              Fergus Noble
maintainer:          fergus@swift-nav.com
copyright:           (c) Fergus Noble, 2014
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable ecstatic
  main-is:             Development/Ecstatic.hs
  build-depends:       base >=4.6 && <4.8,
                       mtl,
                       -- NOTE: using a locally forked version for now.
                       -- need to derive Eq,Ord for NodeInfo
                       language-c >=0.4.5 && <0.5,
                       containers >=0.4.0 && <0.6,
                       ansi-terminal,
                       uniplate,
                       pretty,
                       -- Local package
                       simplify
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
